--- a/src/Modules/MasterModule/Views/RightDetailView.xaml
+++ b/src/Modules/MasterModule/Views/RightDetailView.xaml
@@ -20,7 +20,7 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <ContentControl mvvm:RegionManager.RegionName="{Binding DriverZone}" Grid.Row="0"></ContentControl>
+                <ContentControl mvvm:RegionManager.RegionName="{Binding DriverZoneRegionName}" Grid.Row="0"></ContentControl>
                 <GroupBox  Grid.Row="1" Header="{Binding TarjetaDeCredito, Source={StaticResource ResourceLanguage}}" Margin="5,5,-83,5" HorizontalAlignment="Left" Width="507">
                     <karveControls:CreditCardUserControl Margin="-2,0,0,0"/>
                 </GroupBox>
